# gig

./: .gitignore  CMakeLists.txt  clean.sh  run.sh
.zed/: tasks.json
include/: game.hpp  input.hpp
src/: game.cpp  input.cpp  main.cpp
